--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -19,7 +19,7 @@
 
         <div>
             <h2>Youtube video: 届かない恋</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/dGLVcKPUgdY?start=180&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dGLVcKPUgdY?start=180&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div>
